# lpus

./: .gitignore  Cargo.toml  README.md  build.rs  nonpaged-pool-range.md
.cargo/: config
logs/: build_process_tree.py  eprocess_scan_log_2.txt  file_object_scan_log_2.txt
logs/dump_test/1/: eprocess_lpusscan.csv  eprocess_scan_log.txt  eprocess_to_csv.py  eprocess_volscan.csv  eprocess_volscan.txt  file_lpusscan.csv  file_scan_log.txt  file_to_csv.py  file_volscan.csv  file_volscan.txt  stat.py
other/: parse_file_scan_result.py  to_epoch.py
other/injection_tests/injection-poc/APC-queue/APC-queue/: APC-queue.cpp  APC-queue.sln  APC-queue.vcxproj  APC-queue.vcxproj.filters
other/injection_tests/injection-poc/Process-Injection-poc/: Process-Injection-poc.cpp  Process-Injection-poc.sln  Process-Injection-poc.vcxproj  Process-Injection-poc.vcxproj.filters
other/injection_tests/injection-poc/atom-bombing/: AtomBombing.sln
resource/: lpus.sys
src/: address.rs  commands.rs  downloader.rs  driver_state.rs  ioctl_protocol.rs  lib.rs  main.rs  object.rs  pdb_store.rs  windows.rs
src/lib/: driver_state.rs  ioctl_protocol.rs  lib.rs  object.rs  paging_structs.rs  paging_structs_new.rs  paging_traverse.rs  paging_traverse_new.rs  pdb_store.rs  windows.rs
src/lib/pte_scan/: mod.rs  paging_structs.rs  paging_traverse.rs
src/lib/utils/: disassemble.rs  hex_dump.rs  mask_cast.rs  mod.rs
src/old-bin/: demo.rs  driver_irp.rs  eprocess_scan.rs  file_object_scan.rs  kernel_module_traverse.rs  read_cr3.rs  test.rs  test_load.rs  test_pfn_database.rs  translate-addr.rs
src/repl/: lpus.pest  lval.rs  parser.rs  repl.rs
(+255 files in other folders)
