[package]
name = "parse_pdb_for_offsets"
version = "0.1.0"
authors = ["nganhkhoa <mail.nganhkhoa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdb = "0.5.0"
reqwest = { version = "0.10.1", features = ["blocking"] }

